syntax = "proto3";

package pp_auth;

service AuthService {
  rpc VerifyAccessToken(TokenMessage) returns (User);
  rpc RotateTokens(TokenMessage) returns (RotateTokensResponse);
}

message TokenMessage {
  string token = 1;
}

message User {
  string id = 1;
  string email = 2;
}

message Tokens {
  string accessToken = 1;
  string refreshToken = 2;
}

message RotateTokensResponse {
  User user = 1;
  Tokens tokens = 2;
}
