syntax = "proto3";

package users;

service GrpcUsersService {
  rpc VerifyEmail (UserEmailRequest) returns (UserResponse);
  rpc GetProfile (UserIdRequest) returns (UserResponse);
  rpc CreateUser (Profile) returns (UserResponse);
}

message UserEmailRequest {
  string email = 1;
}

message UserIdRequest {
  string id = 1;
}

message UserResponse {
  Profile user = 1;
}

message Profile {
  string id = 1;
  string email = 2;
  string firstName = 3;
  string lastName = 4;
  string role = 5;
  optional string profileUrl = 6;
}
